--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline{
 
     stage('Deploy'){
       steps{
-        sh /var/lib/jenkins/workspace/leafer/scripts/deploy.sh &
+        /var/lib/jenkins/workspace/leafer/scripts/deploy.sh &
       }
     }
   }
