--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -11,7 +11,8 @@ pipeline{
 
     stage('DB_Migration'){
       steps{
-        mysql -u root -proot < /var/lib/jenkins/workspace/leafer/scripts/leafer.sql
+        chmod +x '/var/lib/jenkins/workspace/leafer/scripts/db_config.sh'
+        sh '/var/lib/jenkins/workspace/leafer/scripts/db_config.sh'
       }
     }
 
