--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -4,8 +4,12 @@ pipeline{
   stages{
     stage('Build'){
       steps{
-        cd /var/lib/jenkins/workspace/leafer
-        mvn clean install
+        step{
+          cd /var/lib/jenkins/workspace/leafer
+        }
+        step{
+          mvn clean install
+        }
       }
     }
 
