--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -5,13 +5,13 @@ pipeline{
     stage('Build'){
       steps{
           sh 'cd /var/lib/jenkins/workspace/leafer'
-          sh 'mvn clean install'
+          sh 'mvn clean package'
       }
     }
 
     stage('Deploy'){
       steps{
-        sh 'ansible-playbook deploy.yml'
+        sh 'ansible-playbook /var/lib/jenkins/workspace/leafer/scripts/deploy.yml'
       }
     }
   }
