--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline{
     stage('Build'){
       steps{
           sh 'cd /var/lib/jenkins/workspace/leafer'
-          sh 'mvn clean package'
+          sh 'mvn package'
       }
     }
 
