--- a/pom.xml
+++ b/pom.xml
@@ -161,10 +161,10 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
+                <artifactId>maven-jar-plugin</artifactId>
                 <version>2.6</version>
                 <configuration>
-                    <warName>leafer</warName>
+                    <finalName>leafer</finalName>
                 </configuration>
             </plugin>
         </plugins>
